--- a/frontend/src/app/entities/WebSocket/webSocket.module.css
+++ b/frontend/src/app/entities/WebSocket/webSocket.module.css
@@ -1,17 +1,28 @@
-.inputMessage {
-  width: 100%;
-  height: 50px;
-}
-
 .messagesContainer {
   width: 100%;
   position: sticky;
   height: fit-content;
   top: 0;
-  background-color: red;
+  font-size: 18px;
+  color: rgb(219, 216, 216);
+  padding: 15px 15px 0 15px;
 }
 
 .inputContainer {
   margin-top: auto;
+  display: flex;
   width: 100%;
+}
+
+.input {
+  width: 90%;
+  height: 40px;
+  outline: none;
+  padding: 5px;
+}
+
+.btnSend {
+  width: 10%;
+  cursor: pointer;
+  outline: none;
 }
