--- a/frontend/src/components/Room/RoomPage/roomPage.module.css
+++ b/frontend/src/components/Room/RoomPage/roomPage.module.css
@@ -1,12 +1,9 @@
 .roomContainer {
   margin: 0 auto;
-  width: 800px;
+  width: 700px;
   height: 90vh;
-  border: 2px solid teal;
+  border: 1px solid teal;
   display: flex;
-}
-
-.WebSocketContainer {
-  margin-top: 30px;
-  width: 100%;
+  flex-direction: column;
+  background-color: #212121;
 }
